test/mutation_analysis/s0925_long_pressed_name/hafis/o3/mutants/11/result.txt
./test/mutation_analysis/s0925_long_pressed_name/hafis/o3/mutants/11/Solution.java:24: error: unreachable statement
        while (false) {
                      ^
1 error
